gst_caps_features_new() prototype is missing G_GNUC_NULL_TERMINATED
The prototype of gst_caps_features_new()
does not have G_GNUC_NULL_TERMINATED
. I think it should be added so the compiler will warn if you forget the trailing NULL
argument noted in the docs. (Guess how I found out this was an issue? ;) )
By contrast, compare gst_structure_new()
, which does have the attribute. gcc gives me a nice "warning: missing sentinel in function call" when I forget the NULL
on that function.
Thanks for considering this report!
Edited by Chris White